# CAP_Practica2_Raytracing

./: .gitignore  CMakeLists.txt  README.md  Scene.txt  Scene2.txt  cuda_multirun.bat  genRandomScene.py  mpi_multirun.bat  multirun.bat  omp_multirun.bat  results.csv  results_cuda.csv  results_mpi.csv  results_omp.csv  results_omp_workstealing.csv
programs/: CMakeLists.txt
programs/cpp/: CMakeLists.txt
programs/cpp/src/: Scene.cpp  main.cpp  random.cpp
programs/cuda/: CMakeLists.txt
programs/cuda/include/: MaterialData.h  Scene.h  raytracing.h  utils.h
programs/cuda/src/: main.cu  raytracing.cu  utils.cu
programs/mpi/: CMakeLists.txt
programs/mpi/include/: utils.h
programs/mpi/src/: main.cpp  utils.cpp
programs/mpi_workstealing/: CMakeLists.txt
programs/mpi_workstealing/include/: utils.h
programs/mpi_workstealing/src/: main.cpp  utils.cpp
programs/omp/: CMakeLists.txt
programs/omp/include/: utils.h
programs/omp/src/: main.cpp  utils.cpp
